--- a/index.html
+++ b/index.html
@@ -4,29 +4,32 @@
 <head>
   <meta charset="utf-8">
   <title>HCX95</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
       <td><img src="Images/me.png" alt="Image not found" width="180" title="Digvijay Mahamuni"></td>
-      <td><h1>Digvijay Mahamuni</h1>
-      <p>Student Technical Head at <strong>Drone Club RIT</strong></<p>
-      <p>Founder of <a href="greevolutiom.com">Greevolution.com</a></p>
-      <p>I am a Computer Science Technolgist, I have unusually huge amount of love for <i>Technology</<i> and <i>Motorsports</i></p></td>
+      <td>
+        <h1>Digvijay Mahamuni</h1>
+        <p>Student Technical Head at <strong>Drone Club RIT</strong></<p>
+        <p>Founder of <a href="greevolutiom.com">Greevolution.com</a></p>
+        <p>I am a Computer Science Technolgist, I have unusually huge amount of love for <i>Technology</<i> and <i>Motorsports</i></p>
+      </td>
     </tr>
   </table>
   <hr>
   <h3>About Me</h3>
   <p>I am Digvijay and I am 19. Having been Curious about the things around me and my
-Enthusiasm, Made me decide my future as an Engineer in the childhood itself.
-Since then, Ingenious approach and out of the box thinking, have always been along
-me. Being aware of the Non-Technical part of Engineering has always made me
-Express my thoughts and share knowledge with others. It really build the
-foundation;More over,It made me better analyse situations, A Good leader and a
-listener. These were significantly supplimentary things. With high thoughts in mind,
-many Inspirations in Heart and Big dreams in Eyes I look forward proceeding to my
-life goals.</p>
+    Enthusiasm, Made me decide my future as an Engineer in the childhood itself.
+    Since then, Ingenious approach and out of the box thinking, have always been along
+    me. Being aware of the Non-Technical part of Engineering has always made me
+    Express my thoughts and share knowledge with others. It really build the
+    foundation;More over,It made me better analyse situations, A Good leader and a
+    listener. These were significantly supplimentary things. With high thoughts in mind,
+    many Inspirations in Heart and Big dreams in Eyes I look forward proceeding to my
+    life goals.</p>
   <hr>
   <h3>Projects</h3>
   <p>Black Line Follower Robot </p>
@@ -42,7 +45,7 @@ life goals.</p>
     <ol>
       <li><a href="https://www.engineeingmindsart.blogspot.com">An Engineer's Mind</a></li>
       <br>
-      <li><a href="https://www.cswissen.blogspot.com" >CS WISSEN </a></li>
+      <li><a href="https://www.cswissen.blogspot.com">CS WISSEN </a></li>
     </ol>
   </ul>
 
